--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,12 @@
 			<groupId>net.sourceforge.tess4j</groupId>
 			<artifactId>tess4j</artifactId>
 			<version>4.5.1</version>
-			</dependency>
+		</dependency>
+		<dependency>
+			<groupId>com.github.librepdf</groupId>
+			<artifactId>openpdf</artifactId>
+			<version>1.3.8</version>
+		</dependency>
 	</dependencies>
 
 	<build>
