--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ build/
 ### VS Code ###
 .vscode/
 src/main/java/com/devbaktiyarov/webocr/dto/ImageDto.java
+files/file.pdf
+files/web_ocr2024-05-22:12:17:53.docx
