--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.application.name=web-ocr
 
 tesseract.datapath=src/main/resources/tessdata
 tesseract.dpi=300
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/web_ocr
+spring.datasource.username=root
+spring.datasource.password=password
