--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=web-ocr
 
-tesseract.datapath=/home/arsen/pet-projects/web-ocr/tessdata
+tesseract.datapath=/home/arsen/pet-projects/tessdata
 tesseract.dpi=300
 
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/web_ocr
 spring.datasource.username=root
 spring.datasource.password=password
+
+path.word = files/word/
+path.pdf = files/pdf/
