Download file from fiile system

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/web_ocr
 spring.datasource.username=root
 spring.datasource.password=password
 
-path.word = files/word/
-path.pdf = files/pdf/
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.show-sql=true
+
+path.word = /files/
+path.pdf = /files/
