--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,10 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
@@ -61,12 +65,18 @@
 			<groupId>org.springframework.boot</groupId>  
 			<artifactId>spring-boot-devtools</artifactId>  
 			<scope>runtime</scope>  
-		</dependency>  
+		</dependency>
+
+
 		<dependency>
 			<groupId>net.sourceforge.tess4j</groupId>
 			<artifactId>tess4j</artifactId>
 			<version>5.9.0</version>
 		</dependency>
+		
+		
+		
+		
 		<dependency>
 			<groupId>com.github.librepdf</groupId>
 			<artifactId>openpdf</artifactId>
