Fix download docx and pdf

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=web-ocr
 
 tesseract.datapath=/home/arsen/pet-projects/tessdata
+# tesseract.datapath=src/main/resources/static/tessdata
 tesseract.dpi=300
 
 spring.jpa.hibernate.ddl-auto=update
@@ -12,5 +13,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
 
-path.word = /files/
+path.word = files/
 path.pdf = files/
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=devbaktiyarovprojects@gmail.com
+spring.mail.password=hsxvkvjpuiafboys
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
