--- a/pom.xml
+++ b/pom.xml
@@ -74,8 +74,11 @@
 			<version>5.9.0</version>
 		</dependency>
 		
-		
-		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+				
 		
 		<dependency>
 			<groupId>com.github.librepdf</groupId>
