--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,8 @@ spring.jpa.show-sql=true
 path.word = files/
 path.pdf = files/
 
+verificationCode.bound=10000
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=devbaktiyarovprojects@gmail.com
